// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h5 should compile 1`] = `
"/* <nil> generated by Svelte v3.58.0 */
import {
	SvelteComponent,
	detach,
	element,
	init,
	insert,
	noop,
	safe_not_equal
} from "svelte/internal";

function create_fragment(ctx) {
	let t_view;

	return {
		c() {
			t_view = element("taro-view-core");
			t_view.textContent = "hello, world";
		},
		m(target, anchor) {
			insert(target, t_view, anchor);
		},
		p: noop,
		i: noop,
		o: noop,
		d(detaching) {
			if (detaching) detach(t_view);
		}
	};
}

class U3Cnilu3E extends SvelteComponent {
	constructor(options) {
		super();
		init(this, options, null, create_fragment, safe_not_equal, {});
	}
}

export default U3Cnilu3E;"
`;

exports[`mini program should compile 1`] = `
"/* <nil> generated by Svelte v3.58.0 */
import {
	SvelteComponent,
	detach,
	element,
	init,
	insert,
	noop,
	safe_not_equal
} from "svelte/internal";

function create_fragment(ctx) {
	let t_view;

	return {
		c() {
			t_view = element("view");
			t_view.textContent = "hello, world";
		},
		m(target, anchor) {
			insert(target, t_view, anchor);
		},
		p: noop,
		i: noop,
		o: noop,
		d(detaching) {
			if (detaching) detach(t_view);
		}
	};
}

class U3Cnilu3E extends SvelteComponent {
	constructor(options) {
		super();
		init(this, options, null, create_fragment, safe_not_equal, {});
	}
}

export default U3Cnilu3E;"
`;
